update copy, add condo bower package, update docs

--- a/assets/stylesheets/base.scss
+++ b/assets/stylesheets/base.scss
@@ -5,6 +5,7 @@
 // Setup
 @import
   '../../bower_components/shevy/core/shevy',
+  '../../bower_components/condo/core/condo',
   'globals/variables',
   'globals/functions',
   'globals/mixins'
