--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -155,12 +155,25 @@ h6 {
 }
 
 .container {
-  width: 85%;
-  margin: 0 auto;
+  max-width: 85%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.container::after {
+  clear: both;
+  content: "";
+  display: table;
 }
 @media (min-width: 1025px) {
   .container {
-    width: 75%;
+    max-width: 65%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .container::after {
+    clear: both;
+    content: "";
+    display: table;
   }
 }
 
