--- a/assets/stylesheets/sections/_container.scss
+++ b/assets/stylesheets/sections/_container.scss
@@ -3,10 +3,9 @@
 //////////////////////////////
 
 .container {
-  width: 85%;
-  margin: 0 auto;
+  @include container(85%, 'center');
 
   @include bp(bravo) {
-    width: 75%;
+    @include container(65%, 'center');
   }
 }
